--- a/MduiBlazor.Shared/Pages/Examples/Layout/FullLayout.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Layout/FullLayout.razor
@@ -1,10 +1,37 @@
-<MduiLayout AppbarFixedWithToolbar AppbarFixedWithTab>
-    <MduiAppbar>
-        <MduiToolbar>...</MduiToolbar>
-        <MduiTab>...</MduiTab>
-    </MduiAppbar>
-    <MduiDrawer>...</MduiDrawer>
-    <MduiLayoutContent>
-        ...
-    </MduiLayoutContent>
-</MduiLayout>
+<div class="mdui-shadow-5" style="height: 360px;">
+    <MduiLayout AppbarWithTab AppbarWithToolbar>
+        <MduiAppbar>
+            <MduiToolbar Color="@Colors.Theme.Primary">
+                <MduiIconButton OnClick="@ToggleDrawer" Icon="menu" />
+                <MduiText Typo="@Typo.title">Title</MduiText>
+                <MduiToolbarSpace />
+                <MduiIconButton Icon="search" />
+                <MduiIconButton Icon="refresh" />
+                <MduiMenu Icon="more_vert" AlignEnd>
+                    <MduiMenuItem>Help & feedback</MduiMenuItem>
+                    <MduiMenuItem Disabled>Settings</MduiMenuItem>
+                    <MduiDivider />
+                    <MduiMenuItem>Sign out</MduiMenuItem>
+                </MduiMenu>
+            </MduiToolbar>
+            <MduiTab Color="@Colors.Theme.Primary">
+                <MduiTabItem Title="web" Default />
+                <MduiTabItem Title="shopping" />
+                <MduiTabItem Title="images" />
+             </MduiTab>
+        </MduiAppbar>
+        <MduiDrawer @bind-Opened="@open">侧边导航栏</MduiDrawer>
+        <MduiLayoutContent>
+            这里是页面内容
+        </MduiLayoutContent>
+    </MduiLayout>
+</div>
+
+@code {
+    bool open;
+
+    void ToggleDrawer()
+    {
+        open = !open;
+    }
+}
