--- a/MduiBlazor.Shared/Pages/Examples/Layout/LayoutWithTab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Layout/LayoutWithTab.razor
@@ -1,8 +1,14 @@
-<MduiLayout AppbarFixedWithTab>
-    <MduiAppbar>
-        <MduiTab>...</MduiTab>
-    </MduiAppbar>
-    <MduiLayoutContent>
-        ...
-    </MduiLayoutContent>
-</MduiLayout>
+<div class="mdui-shadow-5" style="height: 360px;">
+    <MduiLayout AppbarWithTab>
+        <MduiAppbar>
+            <MduiTab Color="@Colors.Theme.Primary">
+                <MduiTabItem Title="web" Default />
+                <MduiTabItem Title="shopping" />
+                <MduiTabItem Title="images" />
+             </MduiTab>
+         </MduiAppbar>
+         <MduiLayoutContent>
+             这里是页面内容
+         </MduiLayoutContent>
+     </MduiLayout>
+ </div>
