--- a/mdui/src/components/appbar/index.less
+++ b/mdui/src/components/appbar/index.less
@@ -7,24 +7,25 @@
 @import '../toolbar/index';
 
 .mdui-appbar {
-  z-index: @z-index-appbar;
-  .mdui-shadow(4);
-}
-
-/* appbar 固定在顶部 */
-.mdui-appbar-fixed {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   left: 0;
+  z-index: @z-index-appbar;
   transition-timing-function: @animation-curve-linear-out-slow-in;
   transition-duration: 0.3s;
   transition-property: left, right;
   will-change: left, right;
+  .mdui-shadow(4);
+
+  /* appbar 固定在顶部 */
+  &.mdui-appbar-fixed {
+    position: fixed;
+  }
 }
 
 /* 左侧留出抽屉栏的距离 */
-.mdui-appbar-inset.mdui-appbar-fixed {
+.mdui-appbar-inset {
   .mdui-drawer-body-left & {
     @media (min-width: @screen-md-min) {
       left: @drawer-width-md;
